start integrating blueprint.py, add threading and flexibility

--- a/cluster_templates/broad_uger.conf
+++ b/cluster_templates/broad_uger.conf
@@ -7,5 +7,6 @@ sub_cmd qsub
 log_task_id $TASK_ID
 task_id ${SGE_TASK_ID}
 hold_flag -hold_jid
-array_core 1
+j_per_node 1
 array_mem_mb 128000
+project unspecified
