cluster hold, working directory configs

--- a/cluster_templates/lisa.conf
+++ b/cluster_templates/lisa.conf
@@ -3,10 +3,10 @@ hour2_q None
 hour4_q None
 day_q None
 long_q None
-sub_cmd qsub -d $PWD
+sub_cmd qsub
 log_task_id ${PBS_ARRAYID}
 task_id ${PBS_ARRAYID}
-hold_flag -W depend=afterany:
+hold_flag -W depend=afterany:{hold_name}
 j_per_node 16
 array_mem_mb 32000
 project unspecified
