--- a/cluster_templates/broad_uger.conf
+++ b/cluster_templates/broad_uger.conf
@@ -6,7 +6,7 @@ long_q long
 sub_cmd qsub
 log_task_id $TASK_ID
 task_id ${SGE_TASK_ID}
-hold_flag -hold_jid
+hold_flag -hold_jid {hold_name}
 j_per_node 1
 array_mem_mb 128000
 project unspecified
