test of job number hold conditions

--- a/cluster_templates/lisa.conf
+++ b/cluster_templates/lisa.conf
@@ -6,7 +6,7 @@ long_q None
 sub_cmd qsub
 log_task_id ${PBS_ARRAYID}
 task_id ${PBS_ARRAYID}
-hold_flag -W depend=afterany:{hold_name}
+hold_flag -W depend=afterany:{hold_num}
 j_per_node 16
 array_mem_mb 32000
 project unspecified
