admix logging and bugfix; blueprint big_mem option

--- a/cluster_templates/lisa.conf
+++ b/cluster_templates/lisa.conf
@@ -9,4 +9,5 @@ task_id ${PBS_ARRAYID}
 hold_flag -W depend=afterany:{hold_num}
 j_per_node 16
 array_mem_mb 32000
+big_mem_txt :mem64gb
 project unspecified
