new broad cluster settings

--- a/cluster_templates/broad_uger.conf
+++ b/cluster_templates/broad_uger.conf
@@ -1,8 +1,8 @@
-hour_q short
-hour2_q short
-hour4_q long
-day_q long
-long_q long
+hour_q broad
+hour2_q broad
+hour4_q broad
+day_q broad
+long_q broad
 sub_cmd qsub
 log_task_id $TASK_ID
 task_id ${SGE_TASK_ID}
